--- a/.github/workflows/create-issue-by-label.yaml
+++ b/.github/workflows/create-issue-by-label.yaml
@@ -8,7 +8,7 @@ jobs:
     env:
       EVENT: ${{ toJson(github.event) }}
       GITHUB_OWNER: Yu-Jack
-      GITHUB_REPOSITORY: test
+      GITHUB_MAIN_REPOSITORY: test
       GITHUB_PROJECT_NUMBER: "1"
       E2E_PIPELINE: "Review,Ready For Test,Testing"
       GITHUB_REPOSITORY_TEST: test
